feat(comments): show comment count below post content

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -37,6 +37,7 @@
   "common.like": "Like",
   "common.share": "Share",
   "common.commentVerb": "Comment",
+  "common.comments": "Comments",
   "common.description": "Description",
   "common.library": "Library",
   "common.lists": "Lists",
