--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -57,6 +57,7 @@
   "common.vote": "Voto",
   "common.votePlural": "Votos",
   "common.comment": "Comentário",
+  "common.comments": "Comentários",
   "common.delete": "Excluir",
   "common.bio": "Bio",
   "common.currentCity": "Cidade atual",
