feat(polls): toggle show results before voting
Optionally show results before voting instead of always show.

--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -86,6 +86,8 @@
   "common.youMightLike": "Você pode gostar",
   "common.noUsersFound": "Nenhum usuário encontrado.",
   "common.manage": "Gerenciar",
+  "common.showResults": "Ver resultados",
+  "common.hideResults": "Esconder resultados",
   "home.welcomeHeading": "Bem-vindo à versão de testes do AncapHub!",
   "home.features.0": "Tenha à sua disposição milhares de materiais para estudo.",
   "home.features.1": "Crie e participe de grupos de estudo.",
