--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -85,6 +85,8 @@
   "common.previous": "Previous",
   "common.noUsersFound": "No users found.",
   "common.manage": "Manage",
+  "common.showResults": "Show results",
+  "common.hideResults": "Hide results",
   "home.welcomeHeading": "Welcome to AncapHub Alpha!",
   "home.features.0": "Have at your disposal thousands of study materials.",
   "home.features.1": "Create and join study groups.",
