fix(i18n): add missing translations in login screen

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -87,6 +87,7 @@
   "common.manage": "Manage",
   "common.showResults": "Show results",
   "common.hideResults": "Hide results",
+  "common.forgotPassword": "Forgot your password?",
   "home.welcomeHeading": "Welcome to AncapHub Alpha!",
   "home.features.0": "Have at your disposal thousands of study materials.",
   "home.features.1": "Create and join study groups.",
