--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -88,6 +88,7 @@
   "common.manage": "Gerenciar",
   "common.showResults": "Ver resultados",
   "common.hideResults": "Esconder resultados",
+  "common.forgotPassword": "Esqueceu sua senha?",
   "home.welcomeHeading": "Bem-vindo à versão de testes do AncapHub!",
   "home.features.0": "Tenha à sua disposição milhares de materiais para estudo.",
   "home.features.1": "Crie e participe de grupos de estudo.",
