feat(articles): add font size controls

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -88,6 +88,7 @@
   "common.showResults": "Show results",
   "common.hideResults": "Hide results",
   "common.forgotPassword": "Forgot your password?",
+  "common.fontSize": "Font size",
   "home.welcomeHeading": "Welcome to AncapHub Alpha!",
   "home.features.0": "Have at your disposal thousands of study materials.",
   "home.features.1": "Create and join study groups.",
