--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -89,6 +89,7 @@
   "common.showResults": "Ver resultados",
   "common.hideResults": "Esconder resultados",
   "common.forgotPassword": "Esqueceu sua senha?",
+  "common.fontSize": "Tamanho do texto",
   "home.welcomeHeading": "Bem-vindo à versão de testes do AncapHub!",
   "home.features.0": "Tenha à sua disposição milhares de materiais para estudo.",
   "home.features.1": "Crie e participe de grupos de estudo.",
