--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -17,6 +17,8 @@
   "common.following": "Seguindo",
   "common.followers": "Seguidores",
   "common.follow": "Seguir",
+  "common.followBack": "Seguir de volta",
+  "common.followsYou": "Segue você",
   "common.sendMessage": "Enviar Mensagem",
   "common.about": "Sobre",
   "common.collection": "Coleção",
