Atualização para o lançamento

--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -67,6 +67,10 @@
   "common.publish": "Publicar",
   "common.crypto": "Criptomoedas",
   "common.user": "Usuário",
+  "common.address": "Endereço",
+  "common.developers": "Desenvolvedores",
+  "common.copyright": "Direitos autorais",
+  "common.location": "Localização",
   "common.account": "Conta",
   "common.article": "Artigo",
   "common.book": "Livro",
@@ -92,12 +96,18 @@
   "common.hideResults": "Esconder resultados",
   "common.forgotPassword": "Esqueceu sua senha?",
   "common.fontSize": "Tamanho do texto",
+  "common.features": "Funções",
+  "common.homePageTitle": "AncapHub - Plataforma libertária",
   "home.welcomeHeading": "Bem-vindo à versão de testes do AncapHub!",
+  "home.featuresConfirmed": "Confira todas as funções já confirmadas",
+  "home.featuredDescription": "Confira o que está em destaque no meio libertário e tenha à sua disposição uma vasta biblioteca de material para estudo.",
   "home.features.0": "Tenha à sua disposição milhares de materiais para estudo.",
-  "home.features.1": "Crie e participe de grupos de estudo.",
+  "home.features.1": "Crie seu próprio grupo de estudos e conte com ferramentas para comunicação e organização de atividades como kanban, drive de arquivos e chat.",
   "home.features.2": "Conheça libertários que morem perto de você.",
-  "home.features.3": "Confira eventos libertários que irão rolar.",
-  "home.features.4": "Crie e apoie projetos libertários.",
+  "home.features.3": "Confira e marque eventos libertários que irão acontecer mundo afora. Você poderá confirmar sua presença e compartilhar o evento.",
+  "home.features.4": "Publique seu projeto e tenha a disposição ferramentas que irão lhe ajudar a explicá-lo, arrecadar doações e deixar seus seguidores informados de atualizações.",
+  "home.features.5": "Será possível utilizar o site sem cadastro, porém usuários cadastrados podem preencher seu perfil, publicar atualizações e seguir outros usuários.",
+  "home.features.6": "Caso você ativar a função de localização poderá encontrar outros usuários que tenham a função ativada em um raio de até 300km.",
   "home.form.hasAccount": "Já tem uma conta?",
   "home.form.signUp": "Cadastro",
   "home.form.noAccount": "Não possui uma conta?",
@@ -262,7 +272,7 @@
   "events.week": "Semana",
   "events.day": "Dia",
   "events.interested": "Tenho interesse",
-  "events.howToGet": "Como chegar", 
+  "events.howToGet": "Como chegar",
   "events.attendance": "{num} pessoas comparecerão",
   "events.time": "{from} às {to}",
   "events.free": "Gratuito",
@@ -279,5 +289,25 @@
   "nearby.needToEnable": "Para utilizar este recurso é necessário habilitá-lo.",
   "nearby.needToEnableDescription": "Após habilitá-lo, sempre que acessar esta página sua localização será pública e estará disponível para outros usuários. É possível desabilitar o recurso quando quiser na página de configurações.",
   "nearby.radius": "Raio: ",
-  "notifications.noneFound": "Nenhuma notificação foi encontrada."
+  "notifications.noneFound": "Nenhuma notificação foi encontrada.",
+  "container.dmca.title": "Política de direitos autorais",
+  "container.dmca.subtitle": "Definição e classificação de obras passíveis de direitos autorais",
+  "container.dmca.paragraph1": "Ao criar determinada obra que seja original, isto é, obra criativa e fixada em qualquer meio, tangível ou intangível, o indivíduo passa a deter sua titularidade/propriedade e também os direitos sobre esta obra.",
+  "container.dmca.paragraph2": " Como não poderia deixar de ser, tais direitos têm natureza exclusiva para sua utilização de forma determinada e específica.",
+  "container.dmca.paragraph3": " No tocante ao AncapHub, os modelos de obras mais relevantes e que deve-se ter cautela acerca da proteção de direitos autorais são (i) livros (ii) artigos",
+  "container.dmca.paragraph4": " Práticas que não ausentam sua responsabilidade por infração de direitos autorais",
+  "container.dmca.paragraph5": "Observe-se que o conteúdo postado por você pode ainda sofrer reivindicação de violação de direitos autorais, muito embora tenha-se (a) dado crédito ao titular/proprietário dos direitos autorais; (b) identificado a existência de outros arquivos semelhantes no AncapHub; (c) adquirido o arquivo em formato digital de forma legal (d) escaneado o conteúdo de livro físico; (e) dentre outros artifícios que não têm o condão de afastar sua infração de direitos autorais de terceiros.",
+  "container.dmca.paragraph6": "AncapHub não pode dirimir litígios referentes à propriedade de direitos autorais",
+  "container.dmca.paragraph7": " O Portal AncapHub não tem legitimidade, obrigação ou capacidade de dirimir conflitos relativos à propriedade de direitos autorais.",
+  "container.dmca.paragraph8": "Sempre que receber uma notificação válida sobre suposta infração de direitos autorais e pedido para sua exclusão, o AncapHub removerá de seus servidores o conteúdo supostamente infrator vilipendioso.",
+  "container.donations.title": "Doações",
+  "container.donations.paragraph1": "O AncapHub é mantido 100% por seus desenvolvedores que cederam e ainda cedem centenas de horas dedicadas ao desenvolvimento do projeto além de todo o dinheiro necessário para mantê-lo no ar. Com a chegada do lançamento ao público os custos irão se intensificar e a sua ajuda se tornará essencial para mantermos tudo funcionando.",
+  "container.donations.paragraph2": "Pretendemos nos auto sustent através de anúncios e um plano pago com funções exclusivas que nã foram anunciadas. Até chegarmos nesse ponto, irá demorar um certo tempo e precisamos seguir firmes até lá.",
+  "container.donations.paragraph3": "Caso você disponha de recursos e deseja ajudar o projeto, caso estes realmente não sejam necessários para o seu sustento, gostaríamos de contar com sua ajuda, independente do valor. Abaixo você encontra todas as formas de doação.",
+  "container.signup.title": "Cadastro",
+  "container.signup.subtitle": "Ainda não...",
+  "container.signup.paragraph": "No momento estamos em um período ALPHA, nossa plataforma ainda não está aberta ao público. Apenas alguns usuários que se cadastraram no passado obtiveram o direito de testá-la enquanto a mesma não fica pronta. Nós não iremos mais abrir vagas para a ALPHA, porém ainda neste ano de 2020 iremos liberar um BETA aberta ao público, então se cadastre no formulário abaixo e seja informado assim que a mesma estiver disponível.",
+  "container.signup.notifyMe": "Seja informado assim que lançar",
+  "container.signup.allowEmails": "Permito o envio de e-mails",
+  "container.signup.done": "Feito"
 }
